# telco_arv3

./: .gitignore  BEFORE_AFTER.md  MIGRATION_UV.md  Makefile  README.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_PROPOSAL.md  RESTRUCTURE_SUMMARY.md  RESTRUCTURE_VISUAL.md  SETUP_SUMMARY.md  account_mapping.csv  main_polars_pivot.py  modular_reporting_system.py  pyproject.toml  quick_module_validator.py  requirements.txt.backup  setup_test_env.sh  telco_enhanced_modules.py  telco_modular_implementation.py  verify_setup.py  version.py
.kiro/hooks/: release-automation-hook.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
docs/: requirements.txt.legacy
reports/modular/: telco_bv_jaarrekening_2024.qmd
reports/modular/processed_data/: balance_sheet.csv  chart_data.json  income_statement.csv  metadata.json
reports/modular/report_modules/: data_loader.py  income_statement.py  revenue_charts.py
scripts/: __init__.py  setup_test_env.sh  verify_setup.py
src/financial_reporting/: __init__.py
src/financial_reporting/cli/: __init__.py  telco_report.py  validator.py
src/financial_reporting/core/: __init__.py  calculations.py  data_processor.py  xaf_processor.py
src/financial_reporting/reporting/: __init__.py  modular_system.py  template_generator.py
test/: README.md  __init__.py  fix_setup.py  telco_test_module.py
test/module_tests/: test_asset_charts.py  test_balance_sheet.py  test_executive_summary.py  test_financial_ratios.py  test_income_statement.py  test_notes.py  test_revenue_charts.py  test_setup.py
test/module_tests/processed_data/: metadata.json
test/module_tests/report_modules/: asset_charts.py  balance_sheet.py  executive_summary.py  financial_ratios.py  income_statement.py  notes.py  setup.py
